corrected margin and align items

--- a/src/scss/layout/_projects.scss
+++ b/src/scss/layout/_projects.scss
@@ -15,7 +15,6 @@
         justify-content: flex-start;
         padding-left: 100px;
         padding-top: 24px;
-        
     }
 }
 
@@ -46,7 +45,7 @@
     margin-bottom: 40px;
     letter-spacing: 1.2px;
     @media (min-width: 768px) {
-        margin-left: 150px;
+        margin-left: 90px;
         margin-right: 500px;
         margin-top: 100px;
         text-align: left;
@@ -57,8 +56,9 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 20px;
-    padding: 15px;
+    align-content: center;
+    gap: 30px;
+    padding-bottom: 30px;
 }
 
 .container-articles {
@@ -67,8 +67,8 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
-        gap: 35px;
-        margin-top: 300px;
+        gap: 30px;
+        margin-top: 290px;
         margin-left: 100px;
         margin-right: 100px;
         margin-bottom: 70px;
@@ -77,6 +77,7 @@
 .content {
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .content h3 {
